# paint-assemble

./: Cargo.toml  LICENSE_MIT  README.md
client/: README.md  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
diagrams/: paint_assemble_class.drawio  paint_assemble_sequence.drawio  paint_assemble_use_case.drawio
src/: lib.rs  utils.rs
