[package]
name = "paint-assemble"
version = "0.1.0"
authors = ["filipmilo <filip.milosevic29@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
queues = "1.0.2"
colors-transform = "0.2.11"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'ImageData',
]



[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
